remove neenjaw from contributors

--- a/exercises/practice/binary-search/.meta/config.json
+++ b/exercises/practice/binary-search/.meta/config.json
@@ -1,26 +1,17 @@
 {
   "blurb": "Implement a binary search algorithm.",
-  "authors": [
-    "arthurchipdean"
-  ],
+  "authors": ["arthurchipdean"],
   "contributors": [
     "arueckauer",
     "kunicmarko20",
     "kytrinyx",
-    "neenjaw",
     "petemcfarlane",
     "yisraeldov"
   ],
   "files": {
-    "solution": [
-      "BinarySearch.php"
-    ],
-    "test": [
-      "BinarySearchTest.php"
-    ],
-    "example": [
-      ".meta/example.php"
-    ]
+    "solution": ["BinarySearch.php"],
+    "test": ["BinarySearchTest.php"],
+    "example": [".meta/example.php"]
   },
   "source": "Wikipedia",
   "source_url": "http://en.wikipedia.org/wiki/Binary_search_algorithm"
