--- a/exercises/practice/gigasecond/.meta/config.json
+++ b/exercises/practice/gigasecond/.meta/config.json
@@ -9,7 +9,6 @@
     "kytrinyx",
     "lafent",
     "MatheusNaldi",
-    "neenjaw",
     "petemcfarlane",
     "peteraba",
     "TFarla",
@@ -17,15 +16,9 @@
     "zembrowski"
   ],
   "files": {
-    "solution": [
-      "Gigasecond.php"
-    ],
-    "test": [
-      "GigasecondTest.php"
-    ],
-    "example": [
-      ".meta/example.php"
-    ]
+    "solution": ["Gigasecond.php"],
+    "test": ["GigasecondTest.php"],
+    "example": [".meta/example.php"]
   },
   "source": "Chapter 9 in Chris Pine's online Learn to Program tutorial.",
   "source_url": "http://pine.fm/LearnToProgram/?Chapter=09"
