--- a/exercises/practice/luhn/.meta/config.json
+++ b/exercises/practice/luhn/.meta/config.json
@@ -1,26 +1,17 @@
 {
   "blurb": "Given a number determine whether or not it is valid per the Luhn formula.",
-  "authors": [
-    "Pierre-Vdsp"
-  ],
+  "authors": ["Pierre-Vdsp"],
   "contributors": [
     "arueckauer",
     "dstockto",
     "kunicmarko20",
     "kytrinyx",
-    "neenjaw",
     "yisraeldov"
   ],
   "files": {
-    "solution": [
-      "Luhn.php"
-    ],
-    "test": [
-      "LuhnTest.php"
-    ],
-    "example": [
-      ".meta/example.php"
-    ]
+    "solution": ["Luhn.php"],
+    "test": ["LuhnTest.php"],
+    "example": [".meta/example.php"]
   },
   "source": "The Luhn Algorithm on Wikipedia",
   "source_url": "http://en.wikipedia.org/wiki/Luhn_algorithm"
