--- a/exercises/practice/raindrops/.meta/config.json
+++ b/exercises/practice/raindrops/.meta/config.json
@@ -8,19 +8,12 @@
     "kunicmarko20",
     "kytrinyx",
     "lafent",
-    "neenjaw",
     "petemcfarlane"
   ],
   "files": {
-    "solution": [
-      "Raindrops.php"
-    ],
-    "test": [
-      "RaindropsTest.php"
-    ],
-    "example": [
-      ".meta/example.php"
-    ]
+    "solution": ["Raindrops.php"],
+    "test": ["RaindropsTest.php"],
+    "example": [".meta/example.php"]
   },
   "source": "A variation on FizzBuzz, a famous technical interview question that is intended to weed out potential candidates. That question is itself derived from Fizz Buzz, a popular children's game for teaching division.",
   "source_url": "https://en.wikipedia.org/wiki/Fizz_buzz"
