--- a/exercises/practice/nucleotide-count/.meta/config.json
+++ b/exercises/practice/nucleotide-count/.meta/config.json
@@ -1,24 +1,11 @@
 {
   "blurb": "Given a DNA string, compute how many times each nucleotide occurs in the string.",
-  "authors": [
-    "mikeSimonson"
-  ],
-  "contributors": [
-    "arueckauer",
-    "kytrinyx",
-    "neenjaw",
-    "petemcfarlane"
-  ],
+  "authors": ["mikeSimonson"],
+  "contributors": ["arueckauer", "kytrinyx", "petemcfarlane"],
   "files": {
-    "solution": [
-      "NucleotideCount.php"
-    ],
-    "test": [
-      "NucleotideCountTest.php"
-    ],
-    "example": [
-      ".meta/example.php"
-    ]
+    "solution": ["NucleotideCount.php"],
+    "test": ["NucleotideCountTest.php"],
+    "example": [".meta/example.php"]
   },
   "source": "The Calculating DNA Nucleotides_problem at Rosalind",
   "source_url": "http://rosalind.info/problems/dna/"
