--- a/exercises/practice/pig-latin/.meta/config.json
+++ b/exercises/practice/pig-latin/.meta/config.json
@@ -1,26 +1,17 @@
 {
   "blurb": "Implement a program that translates from English to Pig Latin",
-  "authors": [
-    "brettsantore"
-  ],
+  "authors": ["brettsantore"],
   "contributors": [
     "arueckauer",
     "kunicmarko20",
     "kytrinyx",
-    "neenjaw",
     "petemcfarlane",
     "woylie"
   ],
   "files": {
-    "solution": [
-      "PigLatin.php"
-    ],
-    "test": [
-      "PigLatinTest.php"
-    ],
-    "example": [
-      ".meta/example.php"
-    ]
+    "solution": ["PigLatin.php"],
+    "test": ["PigLatinTest.php"],
+    "example": [".meta/example.php"]
   },
   "source": "The Pig Latin exercise at Test First Teaching by Ultrasaurus",
   "source_url": "https://github.com/ultrasaurus/test-first-teaching/blob/master/learn_ruby/pig_latin/"
