--- a/exercises/practice/roman-numerals/.meta/config.json
+++ b/exercises/practice/roman-numerals/.meta/config.json
@@ -8,20 +8,13 @@
     "kunicmarko20",
     "kytrinyx",
     "lafent",
-    "neenjaw",
     "petemcfarlane",
     "zembrowski"
   ],
   "files": {
-    "solution": [
-      "RomanNumerals.php"
-    ],
-    "test": [
-      "RomanNumeralsTest.php"
-    ],
-    "example": [
-      ".meta/example.php"
-    ]
+    "solution": ["RomanNumerals.php"],
+    "test": ["RomanNumeralsTest.php"],
+    "example": [".meta/example.php"]
   },
   "source": "The Roman Numeral Kata",
   "source_url": "http://codingdojo.org/cgi-bin/index.pl?KataRomanNumerals"
