--- a/exercises/practice/variable-length-quantity/.meta/config.json
+++ b/exercises/practice/variable-length-quantity/.meta/config.json
@@ -1,26 +1,17 @@
 {
   "blurb": "Implement variable length quantity encoding and decoding.",
-  "authors": [
-    "pmatseykanets"
-  ],
+  "authors": ["pmatseykanets"],
   "contributors": [
     "arueckauer",
     "Hrumpa",
     "kunicmarko20",
     "kytrinyx",
-    "neenjaw",
     "petemcfarlane"
   ],
   "files": {
-    "solution": [
-      "VariableLengthQuantity.php"
-    ],
-    "test": [
-      "VariableLengthQuantityTest.php"
-    ],
-    "example": [
-      ".meta/example.php"
-    ]
+    "solution": ["VariableLengthQuantity.php"],
+    "test": ["VariableLengthQuantityTest.php"],
+    "example": [".meta/example.php"]
   },
   "source": "A poor Splice developer having to implement MIDI encoding/decoding.",
   "source_url": "https://splice.com"
