--- a/exercises/practice/wordy/.meta/config.json
+++ b/exercises/practice/wordy/.meta/config.json
@@ -7,20 +7,13 @@
     "kunicmarko20",
     "kytrinyx",
     "lafent",
-    "neenjaw",
     "petemcfarlane",
     "yisraeldov"
   ],
   "files": {
-    "solution": [
-      "Wordy.php"
-    ],
-    "test": [
-      "WordyTest.php"
-    ],
-    "example": [
-      ".meta/example.php"
-    ]
+    "solution": ["Wordy.php"],
+    "test": ["WordyTest.php"],
+    "example": [".meta/example.php"]
   },
   "source": "Inspired by one of the generated questions in the Extreme Startup game.",
   "source_url": "https://github.com/rchatley/extreme_startup"
